--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
-  schedule:
-    # JST 10:00（UTC 01:00）
-    - cron: '0 1 * * *'
 
 permissions:
   contents: write
@@ -30,11 +27,14 @@ jobs:
 
       - name: Commit changes if any
         run: |
-          if [[ -n "$(git status --porcelain data assets)" ]]; then
+          git add -A
+          CHANGES="$(git diff --cached --name-only | grep -E '^(data/|assets/)' || true)"
+          if [[ -n "${CHANGES}" ]]; then
             git config user.name  "github-actions[bot]"
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add data assets
             git commit -m "build: update attendance visuals [skip ci]"
             git push
+          else
+            echo "No changes in data/ or assets/, skipping commit."
           fi
 
